syntax = "proto2";

package launcher;

message Register {
  optional string pipe = 1;
}

message Restart {
  optional int64 pid = 1;
}

message Spawn {
  optional string id = 1;
  optional string binary = 2;
  optional string svc_user = 3;
  optional string svc_group = 4;
  optional string svc_password = 5;
  map<string, string> env = 6;
}

message SpawnOk {
  optional int64 pid = 1;
}

message Terminate {
  optional int64 pid = 1;
}

message TerminateOk {
  optional int32 exit_code = 1;
  optional ShutdownMethod shutdown_method = 2;
}

enum ShutdownMethod {
  AlreadyExited = 0;
  GracefulTermination = 1;
  Killed = 2;
}
